--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>GoBarber JS</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <title>GoBarber</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
